--- a/Lab4/Challenge1/style.css
+++ b/Lab4/Challenge1/style.css
@@ -3,19 +3,36 @@ body {
 
 }
 
-
 img {
-  width: 200px;
+  width: 190px;
   height: auto;
+  margin: 8%;
+}
 
+.img-box {
+  border: pink 2px dashed;
+  margin-right: 80%;
 }
 
 .main-div {
+  border: black 4px solid;
+  margin: 8%;
 
 }
 
 
 .text-box {
   border: green 2px dashed;
+  margin: 20px;
+  height: 30px
+
+}
+
+p {
+  font-size: 15px;
+  color: purple;
+  font-weight: lighter;
+  line-height: 2px;
+  margin-left: 10px;
 
 }
