--- a/Lab4/Challenge1/style.css
+++ b/Lab4/Challenge1/style.css
@@ -30,7 +30,7 @@ img {
 
 p {
   font-size: 15px;
-  color: purple;
+  color: rgb(197,54,108);
   font-weight: lighter;
   line-height: 2px;
   margin-left: 10px;
