--- a/Assignments/Assignment3/style.css
+++ b/Assignments/Assignment3/style.css
@@ -14,14 +14,15 @@ body {
 
 .header, .navbar {
   color: #FFEFCF;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top: 22px;
+  padding-bottom: 22px;
   text-align: center;
 
 }
 
 .header {
   background-color: #2F2519;
+  font-size: 30px;
 }
 
 .navbar {
@@ -40,6 +41,19 @@ body {
   padding-bottom: 12px;
   background-color: #4A3F35;
   color: #FFEFCF;
+}
+
+a {
+  color: #FFEFCF;
+  text-decoration: none;
+}
+
+h4 {
+  font-size: 20px;
+}
+a:hover {
+  color: white;
+  text-transform: uppercase;
 }
 
 #address {
