--- a/Assignments/Assignment4/style.css
+++ b/Assignments/Assignment4/style.css
@@ -1,44 +1,138 @@
+body {
+    background-color: #FAF9F6;
+    z-index: 0;
+}
+
 .header {
   text-align: center;
   border: 2px black solid;
+  background-color: #e0c1b5;
+  z-index: 0;
 }
 
+.header h1 {
+  color: #654435;
+  font-family: Creepster;
+  font-size: 50px;
+  z-index: 0;
 
-#img1 {
-  position: fixed;
+
+}
+.nav {
+  position: relative;
+  margin-top: .4%;
   z-index: 5;
+  text-align: center;
+  border: 2px black solid;
+  background-color: #654435;
+  padding: .2%;
+}
 
+.nav a {
+  font-family: Creepster;
+  text-decoration: none;
+  color: #e0c1b5;
+  font-size: 25px;
+
+
+}
+#img1 {
+  position: absolute;
+  z-index: 5;
   width: 400px;
   height: auto;
   margin-left: 10%;
   margin-top: 8%;
+  z-index: 2;
 
 }
 
 #img2 {
-  position: fixed;
+  position: absolute;
   z-index: 5;
   left: 52%;
   width: 300px;
   height: auto;
   margin-left: 13%;
   margin-top: 7%;
+  z-index: 2;
+}
+
+#video1:hover + #video2 {
+  visibility: hidden;
 }
 
 
+.video {
+
+  position: relative;
+  z-index: 1;
+}
+#video1, #video2 {
+  position: relative;
+  filter: brightness(80%);
+  filter: blur(3px);
+
+  margin-top: 1%;
+  z-index: 5;
+}
 
 #video1 {
-  position: fixed;
-
+  float: left;
   right: 0;
-  top: 100px;
-
 }
 
 #video2 {
-  position: fixed;
-
   left: 0;
-  top: 100px;
+  float: right;
+}
 
+h1:hover {
+  color: #8b8c7e;
+
+}
+
+.banner {
+  z-index: 5;
+  position: absolute;
+  background-color: #e0c1b5;
+  top: 74%;
+  right: 0px;
+  width: 1600px;
+  height: 30px;
+}
+
+p {
+  z-index: 5;
+  position: relative;
+  display: block;
+  top: -15px;
+  right: 0px;
+  width: 1600px;
+  height: 20px;
+  font-family: Creepster;
+  color: #654435;
+
+  padding: 5px;
+  transform: translateX(100%);
+  animation: move 50s linear infinite
+
+}
+
+
+@keyframes move {
+  to { transform: translateX(-100%); }
+}
+
+
+.main2 {
+  position: absolute;
+  top: 80%;
+  z-index: 0;
+}
+
+.main2 img:nth-child(1) {
+  float: right;
+  width: 600px;
+  height: auto;
 }
