--- a/Assignments/Assignment4/styleAbsolute.css
+++ b/Assignments/Assignment4/styleAbsolute.css
@@ -1,23 +1,21 @@
 body {
-  position: relative;
+    position: absolute;
     background-color: #FAF9F6;
-    z-index: 0;
-
+    z-index: 6;
 }
 
-
-
 .header {
-  height: 100%;
-  position: relative;
-  text-align: center;
+  position: absolute;
+
+  height: 100px;
+  width: 1500px;
   border: 2px black solid;
   background-color: #e0c1b5;
-  z-index: 0;
+  z-index: 6;
 }
 
 .header h1 {
-  position: relative;
+  position: absolute;
   color: #654435;
   font-family: Creepster;
   font-size: 50px;
@@ -27,7 +25,7 @@ body {
 }
 .nav {
   height: 100%;
-  position: relative;
+  position: absolute;
   margin-top: .4%;
   z-index: 5;
   text-align: center;
@@ -37,7 +35,7 @@ body {
 }
 
 .nav a {
-  position: relative;
+  position: absolute;
   font-family: Creepster;
   text-decoration: none;
   color: #e0c1b5;
@@ -46,7 +44,7 @@ body {
 
 }
 #img1 {
-  position: relative;
+  position: absolute;
   z-index: 5;
   width: 400px;
   height: auto;
@@ -57,7 +55,7 @@ body {
 }
 
 #img2 {
-  position: relative;
+  position: absolute;
   z-index: 5;
   left: 27%;
   width: 300px;
@@ -73,7 +71,7 @@ body {
 
 .video {
   height: 1000px;
-  position: relative;
+  position: absolute;
   bottom: 300px;
   filter: brightness(80%);
   filter: blur(3px);
@@ -82,13 +80,17 @@ body {
   z-index: 0;
 }
 
+
+
 #video1 {
   float: left;
+  position: absolute;
 
 }
 
 #video2 {
 
+  position: absolute;
   float: right;
 }
 
@@ -99,9 +101,9 @@ h1:hover {
 
 .banner {
   z-index: 5;
-  position: relative;
+  position: absolute;
   background-color: #e0c1b5;
-  top: -905px;
+  top: 1%;
   right: 0px;
   width: 100%;
   height: 30px;
@@ -109,11 +111,11 @@ h1:hover {
 
 p {
   z-index: 5;
-  position: relative;
+  position: absolute;
   display: block;
-
+  top: -15px;
   right: 0px;
-  width: 100%;
+  width: 1600px;
   height: 20px;
   font-family: Creepster;
   color: #654435;
@@ -131,13 +133,14 @@ p {
 
 
 .main2 {
-  position: relative;
-
+  position: absolute;
+  top: 80%;
   z-index: 0;
 }
 
 .main2 img:nth-child(1) {
-  /* float: right; */
+  position: absolute;
+  float: right;
   width: 600px;
   height: auto;
 }
