--- a/Assignments/Assignment4/stylenike.css
+++ b/Assignments/Assignment4/stylenike.css
@@ -1,27 +1,27 @@
 body {
   position: relative;
-    background-color: #FAF9F6;
+    background-color: black;
     z-index: 0;
 
 }
-
-
 
 .header {
   height: 100%;
   position: relative;
   text-align: center;
-  border: 2px black solid;
-  background-color: #44b6db;
+  border: 2px #fbcdf4 solid;
+  background-color: black;
+
   z-index: 0;
 }
 
 .header h1 {
   position: relative;
-  color: #feb6f2;
+  color: #fbcdf4;
   font-family: Creepster;
   font-size: 50px;
   z-index: 0;
+
 
 
 }
@@ -31,8 +31,8 @@ body {
   margin-top: .4%;
   z-index: 5;
   text-align: center;
-  border: 2px black solid;
-  background-color: #feb6f2;
+  border: 2px #fbcdf4 solid;
+  background-color: black;
   padding: .2%;
 }
 
@@ -40,7 +40,68 @@ body {
   position: relative;
   font-family: Creepster;
   text-decoration: none;
-  color: #44b6db;
+  color: #fbcdf4;
   font-size: 25px;
+}
 
+
+.main img{
+  width: 600px;
+  height: auto;
+  position: relative;
+  left: 30%;
+  right: 30%;
+  z-index: 5;
+  top: 200px;
+}
+
+.main h1 {
+  font-family: 'Gasoek One', sans-serif;
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 200px;
+  top: -275px;
+  color: white;
+}
+
+#globe1{
+  width: 150px;
+  height: auto;
+  position: relative;
+  top: -650px;
+  z-index: 6;
+  left: 10%;
+  right: auto;
+}
+
+#globe2{
+  width: 150px;
+  height: auto;
+  position: relative;
+  top: -650px;
+  z-index: 6;
+  left: 65%;
+
+}
+
+#eyes {
+  width: 150px;
+  height: auto;
+  position: relative;
+
+}
+
+#gif1, #gif2, #gif3, #gif4, #gif5, #gif6, #gif7, #gif8, #gif9, #gif10, #gif11, #gif12, #gif13, #gif14, #gif15 {
+  width: 88px;
+  top: -400px;
+  height: auto;
+  position: relative;
+  z-index: 6;
+  left: 0;
+
+}
+#gif1 {
+  left: 3%;
 }
