--- a/Assignments/Assignment4/stylenike.css
+++ b/Assignments/Assignment4/stylenike.css
@@ -3,6 +3,7 @@ body {
     background-color: black;
     z-index: 0;
 
+
 }
 
 .header {
@@ -149,9 +150,55 @@ body {
 }
 
 #tech1 {
-  width: 200px;
+  width: 550px;
   height: auto;
   position: relative;
-  left: 50%;
-  top: -350px;
+  left: 60%;
+  top: -200px;
+}
+
+#p {
+  color: white;
+  width: 700px;
+  position: relative;
+  left: 7%;
+  top: -800px;
+  z-index: 6;
+  line-height: 30px;
+  padding: 10px;
+  border: 2px #fbcdf4 solid;
+
+}
+
+p {
+  color: white;
+  width: 300px;
+  position: relative;
+  left: 20%;
+  top: -800px;
+  z-index: 6;
+  line-height: 30px;
+  padding: 10px;
+  border: 2px #fbcdf4 solid;
+  text-align: center;
+}
+
+.Main2 img {
+  position: relative;
+  width: 100%;
+  height: auto;
+  left: 0;
+  top: -600px;
+
+}
+
+.Main2 {
+  padding-top: 200px;
+  height: 800px;
+  overflow: hidden;
+}
+
+.sparkle {
+  height: 0px;
+
 }
