--- a/Assignments/Assignment4/style.css
+++ b/Assignments/Assignment4/style.css
@@ -1,11 +1,16 @@
 body {
-  position: relative;
+    position: relative;
     background-color: #FAF9F6;
     z-index: 0;
-
+    overflow-x: hidden;
 }
 
-
+html, body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
 .header {
   height: 100%;
@@ -22,9 +27,8 @@ body {
   font-family: Creepster;
   font-size: 50px;
   z-index: 0;
-
-
 }
+
 .nav {
   height: 100%;
   position: relative;
@@ -42,12 +46,14 @@ body {
   text-decoration: none;
   color: #e0c1b5;
   font-size: 25px;
-
-
 }
+
+#mainPage:hover, #yutoPage:hover, #nikePage:hover {
+  color: white;
+}
+
 #img1 {
   position: relative;
-  z-index: 5;
   width: 400px;
   height: auto;
   margin-left: 10%;
@@ -58,11 +64,9 @@ body {
 
 #img2 {
   position: relative;
-  z-index: 5;
   left: 27%;
   width: 300px;
   height: auto;
-
   margin-top: 7%;
   z-index: 2;
 }
@@ -77,24 +81,19 @@ body {
   bottom: 300px;
   filter: brightness(80%);
   filter: blur(3px);
-
-
   z-index: 0;
 }
 
 #video1 {
   float: left;
-
 }
 
 #video2 {
-
   float: right;
 }
 
 h1:hover {
   color: #8b8c7e;
-
 }
 
 .banner {
@@ -107,39 +106,152 @@ h1:hover {
   height: 30px;
 }
 
-p {
+#animate {
   z-index: 5;
   position: relative;
   display: block;
-
   right: 0px;
   width: 100%;
   height: 20px;
   font-family: Creepster;
   color: #654435;
-
   padding: 5px;
   transform: translateX(100%);
   animation: move 50s linear infinite
-
 }
-
 
 @keyframes move {
   to { transform: translateX(-100%); }
 }
 
-
 .main2 {
   position: relative;
-
+  height:50px;
   z-index: 0;
 }
 
-.main2 img:nth-child(1) {
+#flower1 {
   position: relative;
   float: right;
-  width: 600px;
+  width: 500px;
   height: auto;
-  top: -900px;
+  top: -1385px;
+  left: -60%;
+}
+
+.text {
+  width: 550px;
+  height: auto;
+  position: relative;
+  left: 45%;
+  top: -875px;
+}
+
+#p1, #p2, #p3 {
+  color: black;
+  width: 700px;
+  position: relative;
+  left: 0;
+  z-index: 6;
+  line-height: 30px;
+  padding: 10px;
+  border: 2px #654435 solid;
+}
+
+#p3 {
+  text-align: center;
+}
+
+#landscape {
+  position: relative;
+  left: 45%;
+  width: 722px;
+  top: -865px;
+  height: auto;
+}
+
+.world-time span {
+  text-align: center;
+  font-weight: bolder;
+  color: #e0c1b5;
+  margin-top: 50px;
+  padding: 3px;
+  border: 2px black solid;
+  background-color: #654435;
+}
+
+#est, #cet, #jst {
+  color: #654435;
+  line-height: 50px;
+  padding: 5px;
+  background-color: #e0c1b5;
+  font-weight: normal;
+}
+
+.world-time {
+  background-color: #e0c1b5;
+  border: 2px black solid;
+  position: relative;
+  width: 800px;
+  top: -100px;
+  height: 55px;
+  left: 21%;
+  text-align: center;
+  padding: 10px;
+}
+
+.estClass {
+  top: -448px;
+  position: relative;
+  float: left;
+}
+
+.cetClass {
+  top: -448px;
+  position: relative;
+  float: left;
+  left: 18%;
+}
+
+.jstClass {
+  top: -448px;
+  left: 36%;
+  position: relative;
+  float: left;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  position: relative;
+  left: -420px;
+  width: 300px;
+  height: auto;
+  flex: 33.33%;
+  padding: 5px;
+}
+
+#endcard {
+  font-family: Creepster;
+  text-align: center;
+  position: relative;
+  left: 18%;
+  color: #654435;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.row2 {
+  display: flex;
+}
+
+.column2 {
+  position: relative;
+  left: 100px;
+  width: 300px;
+  height: auto;
+  flex: 33.33%;
+  padding: 5px;
 }
