--- a/Assignments/Assignment4/styleAbsolute.css
+++ b/Assignments/Assignment4/styleAbsolute.css
@@ -1,31 +1,37 @@
 body {
-    position: absolute;
+    position: relative;
     background-color: #FAF9F6;
-    z-index: 6;
+    z-index: 0;
+    overflow-x: hidden;
+}
+
+html, body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .header {
-  position: absolute;
-
-  height: 100px;
-  width: 1500px;
+  height: 100%;
+  position: relative;
+  text-align: center;
   border: 2px black solid;
   background-color: #e0c1b5;
-  z-index: 6;
+  z-index: 0;
 }
 
 .header h1 {
-  position: absolute;
+  position: relative;
   color: #654435;
   font-family: Creepster;
   font-size: 50px;
   z-index: 0;
-
-
 }
+
 .nav {
   height: 100%;
-  position: absolute;
+  position: relative;
   margin-top: .4%;
   z-index: 5;
   text-align: center;
@@ -35,33 +41,42 @@ body {
 }
 
 .nav a {
-  position: absolute;
+  position: relative;
   font-family: Creepster;
   text-decoration: none;
   color: #e0c1b5;
   font-size: 25px;
+}
+
+#mainPage:hover, #yutoPage:hover, #nikePage:hover {
+  color: white;
+}
+
+.main {
+  height: auto;
+  width: 100%;
 
 
 }
+
 #img1 {
   position: absolute;
-  z-index: 5;
-  width: 400px;
-  height: auto;
-  margin-left: 10%;
-  margin-right: auto;
   margin-top: 8%;
+  width: 400px;
+  float: left;
+  padding-left: 12%;
+  padding-right: auto;
+
   z-index: 2;
 }
 
 #img2 {
   position: absolute;
-  z-index: 5;
-  left: 27%;
+  margin-top: 8%;
+  padding-left: 67%;
+  padding-right: auto;
   width: 300px;
-  height: auto;
 
-  margin-top: 7%;
   z-index: 2;
 }
 
@@ -70,77 +85,188 @@ body {
 }
 
 .video {
-  height: 1000px;
-  position: absolute;
-  bottom: 300px;
+
+  height: 400px;
+
+  margin-top: 5px;
   filter: brightness(80%);
   filter: blur(3px);
-
-
   z-index: 0;
 }
 
-
-
 #video1 {
+  width:50%;
   float: left;
-  position: absolute;
-
 }
 
 #video2 {
-
-  position: absolute;
+  width:50%;
   float: right;
 }
 
 h1:hover {
   color: #8b8c7e;
-
 }
 
 .banner {
   z-index: 5;
-  position: absolute;
+
   background-color: #e0c1b5;
-  top: 1%;
+
   right: 0px;
   width: 100%;
   height: 30px;
 }
 
-p {
+#animate {
   z-index: 5;
-  position: absolute;
+
   display: block;
-  top: -15px;
   right: 0px;
-  width: 1600px;
+  width: 100%;
   height: 20px;
   font-family: Creepster;
   color: #654435;
-
   padding: 5px;
   transform: translateX(100%);
   animation: move 50s linear infinite
-
 }
-
 
 @keyframes move {
   to { transform: translateX(-100%); }
 }
 
-
 .main2 {
-  position: absolute;
-  top: 80%;
+
+  height: 825px;
   z-index: 0;
 }
 
-.main2 img:nth-child(1) {
-  position: absolute;
-  float: right;
-  width: 600px;
+#flower1 {
+  position: relative;
+  float: left;
+  width: 500px;
   height: auto;
+  bottom: 510px;
+  left: 5%;
+
+
+}
+
+.text {
+  margin-top: 50px;
+  width: 550px;
+  height: auto;
+  position: relative;
+  left: 45%;
+
+}
+
+#p1, #p2, #p3 {
+  color: black;
+  width: 700px;
+  position: relative;
+  left: 0;
+  z-index: 6;
+  line-height: 30px;
+  padding: 10px;
+  border: 2px #654435 solid;
+}
+
+#p3 {
+  text-align: center;
+}
+
+#landscape {
+  position: relative;
+  left: 10%;
+  width: 722px;
+
+  height: auto;
+}
+
+.world-time span {
+  text-align: center;
+  font-weight: bolder;
+  color: #e0c1b5;
+  margin-top: 50px;
+  padding: 3px;
+  border: 2px black solid;
+  background-color: #654435;
+}
+
+#est, #cet, #jst {
+  color: #654435;
+  line-height: 50px;
+  padding: 5px;
+  background-color: #e0c1b5;
+  font-weight: normal;
+}
+
+.world-time {
+  background-color: #e0c1b5;
+  border: 2px black solid;
+  position: relative;
+  width: 800px;
+
+  height: 55px;
+  left: 21%;
+  text-align: center;
+  padding: 10px;
+}
+
+.estClass {
+
+  position: relative;
+  float: left;
+}
+
+.cetClass {
+
+  position: relative;
+  float: left;
+  left: 18%;
+}
+
+.jstClass {
+
+  left: 36%;
+  position: relative;
+  float: left;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  position: relative;
+  left: -420px;
+  width: 300px;
+  height: auto;
+  flex: 33.33%;
+  padding: 5px;
+}
+
+#endcard {
+  font-family: Creepster;
+  text-align: center;
+  position: relative;
+  left: 18%;
+  color: #654435;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.row2 {
+  display: flex;
+}
+
+.column2 {
+  position: relative;
+  left: 100px;
+  width: 300px;
+  height: auto;
+  flex: 33.33%;
+  padding: 5px;
 }
